[project]
name = "trellis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easydict>=1.13",
    "igraph>=0.11.8",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ninja>=1.11.1.3",
    "numba>=0.61.0",
    "onnxruntime>=1.21.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.1.0",
    "pymeshfix>=0.17.0",
    "pyvista>=0.44.2",
    "rembg[gpu]>=2.0.64",
    "scipy>=1.15.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "trimesh>=4.6.4",
    "xatlas>=0.0.9",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu" },
]
torchvision = [
    { index = "pytorch-cu" },
]
